--- a/frontend/style.css
+++ b/frontend/style.css
@@ -57,7 +57,10 @@ h1 {
     display: flex;
 }
 /* main_area */
-.client_content{
+h2{
+    width: 100%;
+}
+.data_container{
     display: flex;
     justify-content: space-around;
     flex-wrap:wrap;
@@ -82,10 +85,15 @@ label {
   .page.hide {
     display: none;
   }
+  .masterVSservice{
+    display: flex;
+    justify-content:space-between;
+  }
   button:disabled {
     opacity: 0.5;
     cursor: not-allowed;
   }
+
 
 /* input {
     width: 100%;
