--- a/public/css/style.css
+++ b/public/css/style.css
@@ -152,7 +152,7 @@ button:hover {
 .time-slot {
     padding: 10px;
     margin: 5px 0;
-    width: 45%%;
+    width: 45%;
     background-color: #f5f5f5;
     border: 1px solid #ddd;
     border-radius: 5px;
