modified:   public/css/style.css 	modified:   public/html/index.html 	modified:   public/js/calendar.js 	modified:   public/js/dist/calendar.dev.js 	modified:   public/js/dist/front.dev.js 	modified:   public/js/dist/models.dev.js 	modified:   public/js/dist/script.dev.js 	modified:   public/js/front.js 	modified:   public/js/models.js 	modified:   public/js/script.js 	deleted:    public/php/get_masters.php 	deleted:    public/php/get_services.php

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,7 +138,7 @@ button:hover {
     width: 45%;
     margin: 0 2%;
 }
-#calendar_container{
+.calendar_container{
     display:flex;
     justify-content:space-between;
 
@@ -204,3 +204,8 @@ button:hover {
     background-color: #555;
 }
 
+.page_confirmation{
+    display: flex;
+    justify-content:space-between;
+
+}
